# cryptopals-rust

./: .gitignore  Cargo.toml  README.md
data/: corpus.txt
src/: b64.rs  b64_decode.rs  bytes_ext.rs  crypto.rs  hex.rs  lib.rs
