[package]
name = "cryptopals-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cryptopals.com challenges"
repository = "https://github.com/t-mart/cryptopals-rust"
keywords = ["cryptopals"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
openssl = "0.10"
rand = "0.8.5"
